--- a/package.json
+++ b/package.json
@@ -18,19 +18,32 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@adminjs/express": "^6.1.0",
+    "@adminjs/sequelize": "^4.1.1",
     "@googleapis/searchconsole": "^1.0.0",
     "@isaacs/ttlcache": "^1.4.1",
+    "@sequelize/postgres": "^7.0.0-alpha.43",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tiptap/extension-text-style": "^2.8.0",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "@types/react-transition-group": "^4.4.5",
+    "adminjs": "^7.8.13",
     "axios": "^1.1.3",
     "axios-retry": "^3.3.1",
     "chart.js": "^3.9.1",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^7.6.0",
+    "connect-pg-simple": "^10.0.0",
     "cookies": "^0.8.0",
     "croner": "^5.3.5",
     "cryptr": "^6.0.3",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.6.3",
     "https-proxy-agent": "^5.0.1",
     "isomorphic-fetch": "^3.0.0",
@@ -38,6 +51,7 @@
     "msw": "^0.49.0",
     "next": "^12.3.4",
     "nodemailer": "^6.9.9",
+    "pg": "^8.13.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
@@ -50,7 +64,6 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.34.0",
     "sequelize-typescript": "^2.1.6",
-    "sqlite3": "^5.1.6",
     "umzug": "^3.6.1"
   },
   "devDependencies": {
@@ -58,11 +71,14 @@
     "@testing-library/react": "^14.0.0",
     "@types/cookies": "^0.7.7",
     "@types/cryptr": "^4.0.1",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.11.0",
     "@types/nodemailer": "^6.4.6",
+    "@types/pg": "^8",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-timeago": "^4.1.3",
@@ -84,5 +100,6 @@
     "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
-  }
+  },
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
 }
