--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "isolatedModules": true,
       "jsx": "preserve",
       "incremental": true,
-      "experimentalDecorators": true
+      "experimentalDecorators": true,
    },
    "include": [
       "next-env.d.ts",
